# JudgeKit

./: .dockerignore  .env.example  .env.production.example  .gitignore  .nfs.200584dc.7d10  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.judge-worker  README.md  SECURITY.md  deploy-docker.sh  deploy-test-backends.sh  deploy.sh  docker-compose.production.yml  docker-compose.test-backends.yml  docker-compose.worker.yml  docker-compose.yml  drizzle.config.ts  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright-remediation.spec.mjs  playwright-runtime-check.spec.mjs  playwright.config.ts  playwright.visual.config.ts  vitest.config.component.ts  vitest.config.harness.ts  vitest.config.integration.ts  vitest.config.ts
code-similarity-rs/: Cargo.toml
docker/: Dockerfile.judge-apl  Dockerfile.judge-arturo  Dockerfile.judge-b  Dockerfile.judge-brainfuck  Dockerfile.judge-c3  Dockerfile.judge-carp  Dockerfile.judge-clean  Dockerfile.judge-cobol  Dockerfile.judge-cpp  Dockerfile.judge-curry  Dockerfile.judge-elm  Dockerfile.judge-factor  Dockerfile.judge-freebasic  Dockerfile.judge-gleam  Dockerfile.judge-go  Dockerfile.judge-grain  Dockerfile.judge-hare  Dockerfile.judge-idris2  Dockerfile.judge-j  Dockerfile.judge-jvm  Dockerfile.judge-koka  Dockerfile.judge-mercury  Dockerfile.judge-minizinc  Dockerfile.judge-modula2  (+22 more)
docs/: api.md  (+23 more)
judge-worker-rs/: .env.example  Cargo.toml
judge-worker-rs/src/: api.rs  comparator.rs  config.rs  docker.rs  executor.rs  languages.rs  main.rs  pool.rs  runner.rs  types.rs  validation.rs  workspace.rs
(+2791 files in other folders)
