[package]
name = "judge-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "io-util", "signal", "fs"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
memchr = "2"
chrono = { version = "0.4", features = ["alloc"] }
hostname = "0.4"
tokio-util = "0.7"
axum = "0.8"
tower-http = { version = "0.7", features = ["cors"] }
num_cpus = "1"
futures-util = "0.3"
